# magicmarker

./: README.md  pyproject.toml
magic_marker/: __init__.py  node.py  parser.py
markerpry/: __init__.py  node.py  parser.py
tests/: test_evaluate.py  test_node.py  test_parser.py  test_roundtrip.py
