[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markerpry"
version = "0.1.0"
description = "A library for parsing and transforming Python packaging markers"
requires-python = ">=3.7"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "typing-extensions>=4.0.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Documentation = "https://github.com/intentionally-left-nil/markerpry#readme"
Issues = "https://github.com/intentionally-left-nil/markerpry#readme"
Source = "https://github.com/intentionally-left-nil/markerpry#readme"

[tool.hatch.version]
path = "markerpry/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:markerpry tests}"

[tool.coverage.run]
source_pkgs = ["markerpry", "tests"]
branch = true
parallel = true
omit = [
  "markerpry/__about__.py",
]

[tool.coverage.paths]
markerpry = ["markerpry", "*/markerpry/markerpry"]
tests = ["tests", "*/markerpry/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
